@@ -1,0 +1,12 @@
+[cols=">,^,<"]
+|===
+| Name | Index | Desc
+
+| foo
+| 1
+| bar
+
+| bim
+| 2
+| bop
+|===
