@@ -14,6 +14,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 * drop HTML div element if enclosing an image
 * transfer id and class/role attributes to block image
 * pass through width attribute to image if specified on HTML img element
+* preserve non-default table column alignment
 
 === Changed
 
